[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/sheet.png" type="Texture" id=2]
[ext_resource path="res://Scripts/camera.gd" type="Script" id=3]
[ext_resource path="res://Sprites/heart.png" type="Texture" id=4]
[ext_resource path="res://Sprites/player_flash.png" type="Texture" id=5]
[ext_resource path="res://Sprites/coin.png" type="Texture" id=6]
[ext_resource path="res://Resources/Theme/MiniTitleFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Audio/SFX/PlayerHurt.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/SFX/Shoot.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlashSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -22.0, 0.0, 22.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlashSprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -22.0, 0.0, 22.0, 0.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Move"

[sub_resource type="AnimationNodeTimeScale" id=7]

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( 0, 30.25 )
nodes/Move/node = SubResource( 6 )
nodes/Move/position = Vector2( 76, 80.25 )
nodes/TimeScale/node = SubResource( 7 )
nodes/TimeScale/position = Vector2( 326, 112.25 )
nodes/output/position = Vector2( 660, 120 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Move" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachine" id=11]
states/Idle/node = SubResource( 5 )
states/Idle/position = Vector2( 183, 151 )
states/Move/node = SubResource( 8 )
states/Move/position = Vector2( 387, 151 )
transitions = [ "Idle", "Move", SubResource( 9 ), "Move", "Idle", SubResource( 10 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="Animation" id=13]
resource_name = "Flash"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("FlashSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 32
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 48, 80, 16, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="FlashSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="GunPivot" type="Position2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="GunPivot"]
position = Vector2( 8, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )
target = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/Move = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )
parameters/Move/TimeScale/scale = 1.0

[node name="FlashAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
margin_left = 5.0
margin_right = 37.0
margin_bottom = 8.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 8.0
texture = ExtResource( 4 )

[node name="Interact" type="Label" parent="CanvasLayer/Control"]
visible = false
margin_left = 64.0
margin_top = 152.0
margin_right = 256.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 7 )
text = "Interact"
align = 1
valign = 1

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 3

[node name="Control" type="Control" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="HBoxContainer" parent="CanvasLayer2/Control"]
margin_left = 272.0
margin_right = 312.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer2/Control/Coins"]
margin_top = 3.0
margin_right = 27.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2/Control/Coins"]
margin_left = 31.0
margin_right = 40.0
margin_bottom = 24.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
